# swagger_server/swagger/swagger.yaml
@@ -12,7 +12,8 @@ info:
 servers:
 - url: https://pricing-api.flexgrid-project.eu/
 security:
-- oAuth2: []
+- oAuth2:
+  - post_pricing
 paths:
   /pricing:
     post:
@@ -32,7 +33,8 @@ paths:
         "400":
           description: bad request
       security:
-      - oAuth2: []
+      - oAuth2:
+        - post_pricing
       x-openapi-router-controller: swagger_server.controllers.pricing_ucs42_controller
   /pricing/{job_id}:
     get:
@@ -60,7 +62,8 @@ paths:
         "400":
           description: bad request
       security:
-      - oAuth2: []
+      - oAuth2:
+        - post_pricing
       x-openapi-router-controller: swagger_server.controllers.pricing_ucs42_controller
 components:
   schemas:
@@ -145,8 +148,18 @@ components:
           $ref: '#/components/schemas/PricingData'
         error:
           type: string
+          example: No module named 'scipy'
         traceback:
           type: string
+          example: "Traceback (most recent call last):\n  File \"/home/djvergad/ntua/flexgrid/pricing-api/testenv/lib/python3.8/site-packages/celery/app/trace.py\"\
+            , line 451, in trace_task\n    R = retval = fun(*args, **kwargs)\n  File\
+            \ \"/home/djvergad/ntua/flexgrid/pricing-api/testenv/lib/python3.8/site-packages/celery/app/trace.py\"\
+            , line 734, in __protected_call__\n    return self.run(*args, **kwargs)\n\
+            \  File \"/home/djvergad/ntua/flexgrid/pricing-api/workers/tasks.py\"\
+            , line 224, in pricing\n    x, initial_x] = aggr_flex.Run_BRTP()\n  File\
+            \ \"/home/djvergad/ntua/flexgrid/pricing-api/BRTP/BRTP_portfolio.py\"\
+            , line 52, in Run_BRTP\n    from scipy.optimize import minimize\nModuleNotFoundError:\
+            \ No module named 'scipy'\n"
       example:
         date_done: 2022-01-23T09:30:24Z
         result:
@@ -482,8 +495,15 @@ components:
               xlabel: Users
               ylabel: UW with B-RTP(γ)/UW with RTP
         job_id: 801713bc-31a7-46ae-97ed-a3668c2c666a
-        error: error
-        traceback: traceback
+        error: No module named 'scipy'
+        traceback: "Traceback (most recent call last):\n  File \"/home/djvergad/ntua/flexgrid/pricing-api/testenv/lib/python3.8/site-packages/celery/app/trace.py\"\
+          , line 451, in trace_task\n    R = retval = fun(*args, **kwargs)\n  File\
+          \ \"/home/djvergad/ntua/flexgrid/pricing-api/testenv/lib/python3.8/site-packages/celery/app/trace.py\"\
+          , line 734, in __protected_call__\n    return self.run(*args, **kwargs)\n\
+          \  File \"/home/djvergad/ntua/flexgrid/pricing-api/workers/tasks.py\", line\
+          \ 224, in pricing\n    x, initial_x] = aggr_flex.Run_BRTP()\n  File \"/home/djvergad/ntua/flexgrid/pricing-api/BRTP/BRTP_portfolio.py\"\
+          , line 52, in Run_BRTP\n    from scipy.optimize import minimize\nModuleNotFoundError:\
+          \ No module named 'scipy'\n"
         status: SUCCESS
     PricingData:
       required:
@@ -1367,7 +1387,12 @@ components:
       flows:
         password:
           tokenUrl: https://db.flexgrid-project.eu/oauth/token
-          scopes: {}
+          scopes:
+            post_pricing: post a pricing scenario
+        clientCredentials:
+          tokenUrl: https://db.flexgrid-project.eu/oauth/token
+          scopes:
+            post_pricing: post a pricing scenario
       x-tokenInfoFunc: swagger_server.controllers.authorization_controller.check_oAuth2
       x-scopeValidateFunc: swagger_server.controllers.authorization_controller.validate_scope_oAuth2
 
